--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Landing Page</title>
+        <link rel="stylesheet" href="styles.css"/>
         
     </head>
     <body>
@@ -11,8 +12,12 @@
             <div class="header-link">
                 <ol><a href="https://www.google.com">header link 1</a></ol>
                 <ol><a href="https://www.google.com">header link 2</a></ol>
-                <ol><a href="https://www.google.com>">header link 3</a></ol>
-                
+                <ol><a href="https://www.google.com>">header link 3</a></ol>              
+            </div>
+            <div class="title">This Website is awesome
+                <div class="title-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
+                <div class="button">Sign up</div>
+                <div class="image">this is a placeholder for an image</div>
             </div>
         </div>
 
