Add gallery, footer section to index.html

--- a/index.html
+++ b/index.html
@@ -16,10 +16,24 @@
             </div>
             <div class="title">This Website is awesome
                 <div class="title-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
-                <div class="button">Sign up</div>
-                <div class="image">this is a placeholder for an image</div>
+                <div class="tiile-button">Sign up</div>
+                <div class="title-image">this is a placeholder for an image</div>
             </div>
         </div>
+        <div class="gallery">
+            <div class="gallery-title">Some random information</div>
+            <div class="gallery-item-1"></div>
+            <div class="gallery-item-2"></div>
+            <div class="gallery-item-3"></div>
+            <div class="gallery-item-4"></div>
+
+        </div>
+        <div class="quote"> Quotation</div>
+        <div class="footer">
+            <div class="footer-text">Call to action! It's time!</div>
+            <div class="footer-button"></div>
+        </div>
+
 
     </body>
 </html>
