Add footer-button text 'Sign up'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="quote"> Quotation</div>
         <div class="footer">
             <div class="footer-text">Call to action! It's time!</div>
-            <div class="footer-button"></div>
+            <div class="footer-button">Sign up</div>
         </div>
 
 
