Change lines 13-15 from <ul><a href=...<ul> to <ul>...<li>..<li>...<ul> this was done to correct a list mistake which used the 'ul' element before each list item.

--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
         <div class="header">
             <div class="header-logo">Header Logo</div>
             <div class="header-link">
-                <ol><a href="https://www.google.com">header link 1</a></ol>
-                <ol><a href="https://www.google.com">header link 2</a></ol>
-                <ol><a href="https://www.google.com>">header link 3</a></ol>              
+                <li><a href="https://www.google.com">header link 1</a></li>
+                <li><a href="https://www.google.com">header link 2</a></li>
+                <li><a href="https://www.google.com>">header link 3</a></li>              
             </div>
-            <div class="title">This Website is awesome
-                <div class="title-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
-                <div class="tiile-button">Sign up</div>
-                <div class="title-image">this is a placeholder for an image</div>
-            </div>
+        </div>    
+        <div class="title">This Website is awesome
+            <div class="title-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
+            <div class="tiile-button">Sign up</div>
+            <div class="title-image">this is a placeholder for an image</div>
         </div>
+        
         <div class="gallery">
             <div class="gallery-title">Some random information</div>
             <div class="gallery-item-1"></div>
