Reassign header-link class div to individual header links. Add margin to header links. Position and align header logo and header links.

--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <body>
         <div class="header">
             <div class="header-logo">Header Logo</div>
-            <div class="header-link">
-                <ul>
-                  <li><a href="https://www.google.com">header link 1</a></li>
-                  <li><a href="https://www.google.com">header link 2</a></li>
-                  <li><a href="https://www.google.com">header link 3</a></li>              
-                </ul>
-            
+            <div>
+                <div class="header-link"><a href="https://www.google.com">header link one</a></div>
+                <div class="header-link"><a href="https://www.google.com">header link two</a></div>
+                <div class="header-link"><a href="https://www.google.com">header link three</a></div>           
             </div>
         </div>    
         <div class="title">This Website is awesome
