--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
                 <div class="header-link"><a href="https://www.google.com">header link two</a></div>
                 <div class="header-link"><a href="https://www.google.com">header link three</a></div>           
             </div>
-        </div>    
-        <div class="title">This Website is awesome
+        </div>
+        <div class='hero'>    
+            <div class="title">This Website is awesome</div>
             <div class="title-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
             <div class="tiile-button">Sign up</div>
             <div class="title-image">this is a placeholder for an image</div>
