--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
             </div>
         </div>
         <div class='hero'>    
-            <div class="title">This Website is awesome</div>
-            <div class="title-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
-            <div class="tiile-button">Sign up</div>
-            <div class="title-image">this is a placeholder for an image</div>
+        
+            <div class="hero-title">This Website is awesome</div>
+            <div class="hero-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
+            <div class="hero-button">Sign up</div>
+            <div class="hero-image">        
+                <div class="hero-image-item">this is a placeholder for an image</div>
+            </div>
         </div>
+
         
         <div class="gallery">
             <div class="gallery-title">Some random information</div>
