--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
                 <div class="header-link"><a href="https://www.google.com">header link three</a></div>           
             </div>
         </div>
-        <div class='hero'>    
-        
-            <div class="hero-title">This Website is awesome</div>
-            <div class="hero-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
-            <div class="hero-button">Sign up</div>
+        <div class='hero'>
+            <div class="hero-text-box">        
+                <div class="hero-title">This Website is awesome</div>
+                <div class="hero-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
+                <div class="hero-button">Sign up</div>
+            </div>
             <div class="hero-image">        
                 <div class="hero-image-item">this is a placeholder for an image</div>
             </div>
