--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class='hero'>
             <div class="hero-text-box">        
                 <div class="hero-title">This Website is awesome</div>
-                <div class="hero-text"><p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</p></div>
+                <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</div>
                 <div class="hero-button">Sign up</div>
             </div>
             <div class="hero-image">        
