--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         
         <div class="gallery">
             <div class="gallery-title">Some random information</div>
-            <div class="gallery-item-1"></div>
-            <div class="gallery-item-2"></div>
-            <div class="gallery-item-3"></div>
-            <div class="gallery-item-4"></div>
+            <div class="gallery-item-1">box</div>
+            <div class="gallery-item-2">box</div>
+            <div class="gallery-item-3">box</div>
+            <div class="gallery-item-4">box</div>
 
         </div>
         <div class="quote"> Quotation</div>
