Add gallery-item-subtext class and gallery-subtext class

--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
 
         
         <div class="gallery">
-            <div class="gallery-title">Some random information</div>
-            <div class="gallery-item-1">box</div>
-            <div class="gallery-item-2">box</div>
-            <div class="gallery-item-3">box</div>
-            <div class="gallery-item-4">box</div>
+            <div class="gallery-title">Some random information.</div>
+            <div class="gallery-item">
+                <div class="gallery-item-1"></div>
+                <div class="gallery-item-2"></div>
+                <div class="gallery-item-3"></div>
+                <div class="gallery-item-4"></div>
+            </div>
+            <div class="gallery-item-subtext">
+                <div class="gallery-subtext">this is some subtext under an illistration or image</div>
+                <div class="gallery-subtext">this is some subtext under an illistration or image</div>
+                <div class="gallery-subtext">this is some subtext under an illistration or image</div>
+                <div class="gallery-subtext">this is some subtext under an illistration or image</div>
+
+            </div>
 
         </div>
         <div class="quote"> Quotation</div>
