--- a/index.html
+++ b/index.html
@@ -44,7 +44,10 @@
             </div>
 
         </div>
-        <div class="quote"> Quotation</div>
+        <div class="quote-box">
+            <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's jsut filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="sub-quote">-Thor, God of Thunder</div>
+       </div>
         <div class="footer">
             <div class="footer-text">Call to action! It's time!</div>
             <div class="footer-button">Sign up</div>
