--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         </div>
         <div class='hero'>
             <div class="hero-text-box">        
-                <div class="hero-title">This Website is awesome</div>
+                <div class="hero-title">This website is awesome</div>
                 <div class="hero-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.</div>
                 <div class="hero-button">Sign up</div>
             </div>
@@ -48,9 +48,9 @@
             <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's jsut filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="sub-quote">-Thor, God of Thunder</div>
        </div>
-        <div class="footer">
-            <div class="footer-text">Call to action! It's time!</div>
-            <div class="footer-button">Sign up</div>
+        <div class="call-box">
+            <div class="call-text">Call to action! It's time!</div>
+            <div class="call-button">Sign up</div>
         </div>
 
 
