--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
             <div class="sub-quote">-Thor, God of Thunder</div>
        </div>
         <div class="call-box">
-            <div class="call-text">Call to action! It's time!</div>
-            <div class="call-button">Sign up</div>
+            <div class="call-box-blue">
+                <div class="call-text">Call to action! It's time!</div>
+                <div class="call-button">Sign up</div>
+            </div>
         </div>
 
 
