Add call-to-action class. Add call-sub-text class

--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
        </div>
         <div class="call-box">
             <div class="call-box-blue">
-                <div class="call-text">Call to action! It's time!</div>
+                <div class="call-to-action">
+                    <div class="call-text">Call to action! It's time!</div>
+                    <div class="call-sub-text">Sign up for our product by clicking that button right over there!</div>
+                </div>
                 <div class="call-button">Sign up</div>
             </div>
         </div>
