--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
         </div>
         <div class="quote-box">
-            <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's jsut filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
+            <div class="quote"> This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</div>
             <div class="sub-quote">-Thor, God of Thunder</div>
        </div>
         <div class="call-box">
@@ -57,6 +57,7 @@
                 <div class="call-button">Sign up</div>
             </div>
         </div>
+        <div class="footer"></div>
 
 
     </body>
